--- a/fontsProject/Base.lproj/Main.storyboard
+++ b/fontsProject/Base.lproj/Main.storyboard
@@ -1,24 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="da1-Se-vxX">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="4h0-MM-e7B">
+            <objects>
+                <navigationController id="da1-Se-vxX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UeN-zj-1nU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="h1a-te-OKB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hCm-y9-hFl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-935" y="106"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="fontsProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NkS-kv-jTQ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wbe-V3-5q5">
+                                    <size key="itemSize" width="160" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="5"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fontCell" id="baB-5g-Dnj" customClass="FontCollectionViewCell" customModule="fontsProject" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="160" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8mE-cl-mOS">
+                                                    <rect key="frame" x="8" y="35" width="144" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cvj-qL-TdL">
+                                                    <rect key="frame" x="8" y="79" width="144" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.81986395840000004" green="1" blue="0.80309532569999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Cvj-qL-TdL" secondAttribute="trailing" constant="8" id="4sH-oY-AT3"/>
+                                            <constraint firstItem="8mE-cl-mOS" firstAttribute="centerX" secondItem="baB-5g-Dnj" secondAttribute="centerX" id="CV9-BD-Gr4"/>
+                                            <constraint firstAttribute="trailing" secondItem="8mE-cl-mOS" secondAttribute="trailing" constant="8" id="KnG-jC-B2l"/>
+                                            <constraint firstItem="Cvj-qL-TdL" firstAttribute="leading" secondItem="baB-5g-Dnj" secondAttribute="leading" constant="8" id="N0V-8T-WVc"/>
+                                            <constraint firstItem="Cvj-qL-TdL" firstAttribute="centerX" secondItem="baB-5g-Dnj" secondAttribute="centerX" id="ODw-3K-nGL"/>
+                                            <constraint firstItem="8mE-cl-mOS" firstAttribute="top" secondItem="baB-5g-Dnj" secondAttribute="top" constant="35" id="fAR-Kw-9bU"/>
+                                            <constraint firstItem="8mE-cl-mOS" firstAttribute="leading" secondItem="baB-5g-Dnj" secondAttribute="leading" constant="8" id="hDJ-jb-jfL"/>
+                                            <constraint firstItem="Cvj-qL-TdL" firstAttribute="top" secondItem="8mE-cl-mOS" secondAttribute="bottom" constant="20" id="nJh-vO-xFM"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="descriptionLabel" destination="Cvj-qL-TdL" id="uev-lF-PO8"/>
+                                            <outlet property="titleLabel" destination="8mE-cl-mOS" id="phs-iC-8hQ"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="TAp-iy-nxr"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Q5e-OR-POP"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NkS-kv-jTQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="BYB-vY-yHh"/>
+                            <constraint firstAttribute="trailing" secondItem="NkS-kv-jTQ" secondAttribute="trailing" id="Vnl-8n-OZq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NkS-kv-jTQ" secondAttribute="bottom" id="fKz-12-hKH"/>
+                            <constraint firstItem="NkS-kv-jTQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hJq-Ix-y3S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="cQA-Uv-GBl"/>
+                    <connections>
+                        <outlet property="collectionView" destination="NkS-kv-jTQ" id="yOz-1u-FE6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="105.69715142428787"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="fxu-1i-aei">
+            <objects>
+                <viewController storyboardIdentifier="DetailsViewController" id="e9Q-Iq-RUM" customClass="DetailsViewController" customModule="fontsProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h0c-lT-f5W">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucF-k0-eBE">
+                                <rect key="frame" x="187" y="70" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GtJ-bh-blT">
+                                <rect key="frame" x="187" y="100" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6QQ-wG-oLo">
+                                <rect key="frame" x="187" y="160" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ds-YZ-eFR">
+                                <rect key="frame" x="187.5" y="130" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ucF-k0-eBE" firstAttribute="top" secondItem="08m-hv-rgi" secondAttribute="top" constant="50" id="5yH-2b-8c2"/>
+                            <constraint firstItem="ucF-k0-eBE" firstAttribute="centerX" secondItem="h0c-lT-f5W" secondAttribute="centerX" id="7Sk-nD-1eO"/>
+                            <constraint firstItem="6QQ-wG-oLo" firstAttribute="top" secondItem="0Ds-YZ-eFR" secondAttribute="bottom" constant="30" id="9vr-zc-sdY"/>
+                            <constraint firstItem="0Ds-YZ-eFR" firstAttribute="centerX" secondItem="h0c-lT-f5W" secondAttribute="centerX" id="FSe-sE-hMz"/>
+                            <constraint firstItem="6QQ-wG-oLo" firstAttribute="centerX" secondItem="h0c-lT-f5W" secondAttribute="centerX" id="OC3-p8-7Vb"/>
+                            <constraint firstItem="0Ds-YZ-eFR" firstAttribute="top" secondItem="GtJ-bh-blT" secondAttribute="bottom" constant="30" id="QcL-sH-H4y"/>
+                            <constraint firstItem="GtJ-bh-blT" firstAttribute="top" secondItem="ucF-k0-eBE" secondAttribute="bottom" constant="30" id="suX-Wc-770"/>
+                            <constraint firstItem="GtJ-bh-blT" firstAttribute="centerX" secondItem="h0c-lT-f5W" secondAttribute="centerX" id="yGs-hB-kDb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="08m-hv-rgi"/>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="GtJ-bh-blT" id="A7R-BD-5oq"/>
+                        <outlet property="exampleLabel" destination="0Ds-YZ-eFR" id="PSu-gr-XiG"/>
+                        <outlet property="sizeLabel" destination="6QQ-wG-oLo" id="ntP-jq-f3S"/>
+                        <outlet property="titleLabel" destination="ucF-k0-eBE" id="qTG-uR-J52"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eRC-ix-2f0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="774" y="106"/>
         </scene>
     </scenes>
 </document>
